Added support for mocking host inventory data in UI
Updated Host model definition in Swagger to add cost information as well as
start time & duration to records.  Created Angular 2 service to return mocked
host data and built host inventory component to show it within a tabbed
inventory page.
