# services/goldfin-ui/clarity-seed/src/app/app.component.ts
@@ -7,6 +7,14 @@ import { Router } from '@angular/router';
     styleUrls: ['./app.component.scss']
 })
 export class AppComponent {
+    about_open:Boolean = false;
+    logout_open:Boolean = false;
+
     constructor(private router: Router) {
+    }
+
+    logout(): void {
+      this.logout_open = false;
+      this.router.navigate(['/login']);
     }
 }
